Second revision added media queries

--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,14 @@
 		</header>
 		<section id="textbox">
 			<h1>Contact</h1>
-			<p>I am a nature, abstract, and city photographer based in Massachusetts.</p>
-			<p>I'm inspired by historic architecture, the ocean, the colors of New England's fall foliage, and traveling to new places.</p>
+			<h2>Email</h2>
+			<a href="mailto:carriemphotography@gmail.com">carriemphotography@gmail.com</a>
+			<h2>Twitter</h2>
+			<a href="https://twitter.com/cmphotography">@cmphotography</a>
+			<h2>Tumblr</h2>
+			<a href="http://carriemphotography.tumblr.com/">carriemphotography.tumblr.com</a>
+			<h2>LinkedIn</h2>
+			<a href="http://www.linkedin.com/in/carriemacdonald">https://www.linkedin.com/in/carriemacdonald</a>
 		</section>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
