Font changed to Francois One

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Carrie M Photography</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 	<div id="mainpage">
-		<header>
-			<h1><a href="index.html">Carrie M Photography</a></h1>
+		<header id="main-title">
+			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
