--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<body>
 	<div id="aboutpage">
 		<header>
-			<h1><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
