--- a/nature.html
+++ b/nature.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
