Moved photos to CDN

--- a/abstract.html
+++ b/abstract.html
@@ -3,14 +3,36 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Carrie M Photography | Portfolio: Abstract</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="dcterms.dateCopyrighted" content="2014">
+		<meta name="dcterms.rights" content="All rights reserved">
+		<meta name="dcterms.rightsHolder" content="Carrie MacDonald">
+		<meta name="description" content="Boston Harbor water ripples, rustic barn door wood patterns, and window reflections">
+		<meta name="author" content="Carrie MacDonald">
+		<meta property="og:description" content="Portfolio: Abstract | Boston Harbor water ripples, rustic barn door wood patterns, and window reflections">
+		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodsquare.jpg"">
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="667" />
+		<meta property="og:image:height" content="500" />
+		<meta property="og:site_name" content="Carrie M Photography | Portfolio: Abstract">
+		<meta property="og:url" content="http://carriemphotography.com/abstract/">
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52103705-1', 'carriemphotography.com');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<header>
-			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="http://carriemphotography.com">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
@@ -20,16 +42,16 @@
 		</header>
 		<section id="outer_container">
 			<ul id="container">
-				<li><a href="img/abstract/BHHArch.jpg"><img src="img/abstract/BHHArch.jpg" alt="Boston Harbor Hotel Arch"></a></li>
-				<li><a href="img/abstract/DoorknobsandBricks.jpg"><img src="img/abstract/DoorknobsandBricks.jpg" alt="View of doorknobs through glass - Beacon Hill"></a></li>
-				<li><a href="img/abstract/lightpath.jpg"><img src="img/abstract/lightpath.jpg" alt="Liberty Hotel chandelier - long exposure"></a></li>
-				<li><a href="img/abstract/seaweed.jpg"><img src="img/abstract/seaweed.jpg" alt="Boston Harbor seaweed"></a></li>
-				<li><a href="img/abstract/waterripple.jpg"><img src="img/abstract/waterripple.jpg" alt="Boston Harbor water ripples"></a></li>
-				<li><a href="img/abstract/woodsquare.jpg"><img src="img/abstract/woodsquare.jpg" alt="Square barn door wood pattern Athol, MA"></a></li>
-				<li><a href="img/abstract/woodplanks.jpg"><img src="img/abstract/woodplanks.jpg" alt="Vertical barn door wood pattern Athol, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/BHHArch.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/BHHArch.jpg" alt="Boston Harbor Hotel Arch"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/DoorknobsandBricks.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/DoorknobsandBricks.jpg" alt="View of doorknobs through glass - Beacon Hill"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/lightpath.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/lightpath.jpg" alt="Liberty Hotel chandelier - long exposure"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/seaweed.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/seaweed.jpg" alt="Boston Harbor seaweed"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/waterripple.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/waterripple.jpg" alt="Boston Harbor water ripples"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodsquare.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodsquare.jpg" alt="Square barn door wood pattern Athol, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodplanks.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodplanks.jpg" alt="Vertical barn door wood pattern Athol, MA"></a></li>
 			</ul>
 		</section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
