--- a/boston.html
+++ b/boston.html
@@ -3,14 +3,36 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Carrie M Photography | Portfolio: Boston</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="dcterms.dateCopyrighted" content="2014">
+		<meta name="dcterms.rights" content="All rights reserved">
+		<meta name="dcterms.rightsHolder" content="Carrie MacDonald">
+		<meta name="description" content="Beacon Hill, Back Bay and other Boston area architectural photos">
+		<meta name="author" content="Carrie MacDonald">
+		<meta property="og:description" content="Portfolio: Boston | Beacon Hill, Back Bay and other Boston area architectural photos">
+		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillBlackDoor.jpg">
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="667" />
+		<meta property="og:image:height" content="500" />
+		<meta property="og:site_name" content="Carrie M Photography | Portfolio: Boston">
+		<meta property="og:url" content="http://carriemphotography.com/boston/">
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52103705-1', 'carriemphotography.com');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<header>
-			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="http://carriemphotography.com">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
@@ -20,26 +42,26 @@
 		</header>
 		<section id="outer_container">
 			<ul id="container">
-				<li><a href="img/boston/34BeaconHill.jpg"><img src="img/boston/34BeaconHill.jpg" alt="34 Beacon Hill"></a></li>
-				<li><a href="img/boston/53BeaconStVines.jpg"><img src="img/boston/53BeaconStVines.jpg" alt="53 Beacon St Vines"></a></li>
-				<li class="item"><a href="img/boston/BeaconHillBlackDoor.jpg"><img src="img/boston/BeaconHillBlackDoor.jpg" alt="Beacon Hill Black Door"></a></li>
-				<li class="item"><a href="img/boston/BeaconHillClamshell.jpg"><img src="img/boston/BeaconHillClamshell.jpg" alt="Beacon Hill Clamshell"></a></li>
-				<li class="item"><a href="img/boston/BeaconHillHorseshoe.jpg"><img src="img/boston/BeaconHillHorseshoe.jpg" alt="Beacon Hill Horseshoe"></a></li>
-				<li class="item"><a href="img/boston/BeaconHillIronDesign.jpg"><img src="img/boston/BeaconHillIronDesign.jpg" alt="Beacon Hill Wrought Iron"></a></li>
-				<li class="item"><a href="img/boston/BeaconHillWoodenDoor.jpg"><img src="img/boston/BeaconHillWoodenDoor.jpg" alt="Beacon Hill Wooden Door"></a></li>
-				<li class="item"><a href="img/boston/BeaconStGlassLamp.jpeg"><img src="img/boston/BeaconStGlassLamp.jpeg" alt="Beacon St Glass Lamp"></a></li>
-				<li class="item"><a href="img/boston/BeaconStWheatUrnDoorway.jpg"><img src="img/boston/BeaconStWheatUrnDoorway.jpg" alt="Beacon St Doorway"></a></li>
-				<li class="item"><a href="img/boston/BeaconStYellowLeaves.jpg"><img src="img/boston/BeaconStYellowLeaves.jpg" alt="Yellow Leaves on Beacon St"></a></li>
-				<li class="item"><a href="img/boston/BronzeTurtles.jpeg"><img src="img/boston/BronzeTurtles.jpeg" alt="Bronze Turtles Boston, MA"></a></li>
-				<li class="item"><a href="img/boston/ICA.jpeg"><img src="img/boston/ICA.jpeg" alt="Institute of Contemporary Art Boston"></a></li>
-				<li class="item"><a href="img/boston/IsabellaResidence.jpg"><img src="img/boston/IsabellaResidence.jpg" alt="152 Beacon St Boston, MA"></a></li>
-				<li class="item"><a href="img/boston/MIT_Stata.jpeg"><img src="img/boston/MIT_Stata.jpeg" alt="MIT Stata Center Cambridge, MA"></a></li>
-				<li class="item"><a href="img/boston/PepperUrn.jpg"><img src="img/boston/PepperUrn.jpg" alt="Pepper Urn Beacon St Boston, MA"></a></li>
-				<li class="item"><a href="img/boston/SouthEndBrownstones.jpeg"><img src="img/boston/SouthEndBrownstones.jpeg" alt="South End Boston, MA"></a></li>
-				<li class="item"><a href="img/boston/StateHouse.jpeg"><img src="img/boston/StateHouse.jpeg" alt="State House Boston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/34BeaconHill.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/34BeaconHill.jpg" alt="34 Beacon Hill"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/53BeaconStVines.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/53BeaconStVines.jpg" alt="53 Beacon St Vines"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillBlackDoor.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillBlackDoor.jpg" alt="Beacon Hill Black Door"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillClamshell.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillClamshell.jpg" alt="Beacon Hill Clamshell"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillHorseshoe.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillHorseshoe.jpg" alt="Beacon Hill Horseshoe"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillIronDesign.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillIronDesign.jpg" alt="Beacon Hill Wrought Iron"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillWoodenDoor.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconHillWoodenDoor.jpg" alt="Beacon Hill Wooden Door"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconStGlassLamp.jpeg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconStGlassLamp.jpeg" alt="Beacon St Glass Lamp"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconStWheatUrnDoorway.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconStWheatUrnDoorway.jpg" alt="Beacon St Doorway"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconStYellowLeaves.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BeaconStYellowLeaves.jpg" alt="Yellow Leaves on Beacon St"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/BronzeTurtles.jpeg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/BronzeTurtles.jpeg" alt="Bronze Turtles Boston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/ICA.jpeg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/ICA.jpeg" alt="Institute of Contemporary Art Boston"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/IsabellaResidence.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/IsabellaResidence.jpg" alt="152 Beacon St Boston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/MIT_Stata.jpeg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/MIT_Stata.jpeg" alt="MIT Stata Center Cambridge, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/PepperUrn.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/PepperUrn.jpg" alt="Pepper Urn Beacon St Boston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/SouthEndBrownstones.jpeg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/SouthEndBrownstones.jpeg" alt="South End Boston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/boston/StateHouse.jpeg"><img src="http://dp0dygervfbgv.cloudfront.net/img/boston/StateHouse.jpeg" alt="State House Boston, MA"></a></li>
 			</ul>
 		</section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
