--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
 		<meta charset="UTF-8">
 		<title>Carrie M Photography</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="dcterms.dateCopyrighted" content="2014">
+		<meta name="dcterms.rights" content="All rights reserved">
+		<meta name="dcterms.rightsHolder" content="Carrie MacDonald">
+		<meta name="description" content="Nature, abstract, and city photography by Carrie MacDonald">
+		<meta name="author" content="Carrie MacDonald">
+		<meta property="og:description" content="Nature, abstract, and city photography by Carrie MacDonald">
+		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.net/img/brooklynbridge.jpg">
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="1000" />
+		<meta property="og:image:height" content="750" />
+		<meta property="og:site_name" content="Carrie M Photography">
+		<meta property="og:url" content="http://carriemphotography.com/">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52103705-1', 'carriemphotography.com');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 	<div id="mainpage">
 		<header id="main-title">
-			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="http://carriemphotography.com">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
@@ -22,6 +43,6 @@
 		</header>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
