--- a/nature.html
+++ b/nature.html
@@ -1,16 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>Carrie M Photography | Portfolio: Nature</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="dcterms.dateCopyrighted" content="2014">
+		<meta name="dcterms.rights" content="All rights reserved">
+		<meta name="dcterms.rightsHolder" content="Carrie MacDonald">
+		<meta name="description" content="Hiking trails, flowers, and the Atlantic Ocean viewed from Rockport">
+		<meta name="author" content="Carrie MacDonald">
+		<meta property="og:description" content="Portfolio: Nature | Hiking trails, flowers, and the Atlantic Ocean viewed from Rockport">
+		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.nethttp://dp0dygervfbgv.cloudfront.net/img/nature/LightPurpleHydrangea.jpg">
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="500" />
+		<meta property="og:image:height" content="504" />
+		<meta property="og:site_name" content="Carrie M Photography | Portfolio: Nature">
+		<meta property="og:url" content="http://carriemphotography.com/nature/">
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52103705-1', 'carriemphotography.com');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<header>
-			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="http://carriemphotography.com">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
@@ -20,25 +42,25 @@
 		</header>
 		<section id="outer_container">
 			<ul id="container">
-				<li><a href="img/nature/dunnparkdownstairs.jpg"><img src="img/nature/dunnparkdownstairs.jpg" alt="Dunn Park Gardner, MA"></a></li>
-				<li><a href="img/nature/dunnparkstairs.jpg"><img src="img/nature/dunnparkstairs.jpg" alt="Dunn Park Gardner, MA"></a></li>
-				<li><a href="img/nature/GrassandWater.jpg"><img src="img/nature/GrassandWater.jpg" alt="Rockport, MA"></a></li>
-				<li><a href="img/nature/greenmoss.jpg"><img src="img/nature/greenmoss.jpg" alt="Green Moss"></a></li>
-				<li><a href="img/nature/Lighthouse.jpg"><img src="img/nature/Lighthouse.jpg" alt="Lighthouse Rockport, MA"></a></li>
-				<li><a href="img/nature/LightPurpleHydrangea.jpg"><img src="img/nature/LightPurpleHydrangea.jpg" alt="Hydrangea - Harvard Yard"></a></li>
-				<li><a href="img/nature/morsespond.jpg"><img src="img/nature/morsespond.jpg" alt="Morses Pond Wellesley, MA"></a></li>
-				<li><a href="img/nature/NoQuarrySwimming.jpg"><img src="img/nature/NoQuarrySwimming.jpg" alt="Halibut Point Quarry Rockport, MA"></a></li>
-				<li><a href="img/nature/OceantoOverlook.jpg"><img src="img/nature/OceantoOverlook.jpg" alt="Halibut Point Rockport, MA"></a></li>
-				<li><a href="img/nature/orangetulips.jpg"><img src="img/nature/orangetulips.jpg" alt="Tulips Atlantic Ave. Boston, MA"></a></li>
-				<li><a href="img/nature/otterriver.jpg"><img src="img/nature/otterriver.jpg" alt="Otter River State Forest"></a></li>
-				<li><a href="img/nature/redberries.jpg"><img src="img/nature/redberries.jpg" alt="Red Berries Westminster, MA"></a></li>
-				<li><a href="img/nature/RockPile.jpg"><img src="img/nature/RockPile.jpg" alt="Rock Pile Rockport, MA"></a></li>
-				<li><a href="img/nature/RockTowerwContrast.jpg"><img src="img/nature/RockTowerwContrast.jpg" alt="Balanced Rocks Rockport, MA"></a></li>
-				<li><a href="img/nature/SailboatandGrass.jpg"><img src="img/nature/SailboatandGrass.jpg" alt="Sailboat Rockport, MA"></a></li>
-				<li><a href="img/nature/tullylaketrail.jpg"><img src="img/nature/tullylaketrail.jpg" alt="Tully Lake Royalston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/dunnparkdownstairs.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/dunnparkdownstairs.jpg" alt="Dunn Park Gardner, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/dunnparkstairs.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/dunnparkstairs.jpg" alt="Dunn Park Gardner, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/GrassandWater.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/GrassandWater.jpg" alt="Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/greenmoss.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/greenmoss.jpg" alt="Green Moss"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/Lighthouse.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/Lighthouse.jpg" alt="Lighthouse Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/LightPurpleHydrangea.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/LightPurpleHydrangea.jpg" alt="Hydrangea - Harvard Yard"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/morsespond.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/morsespond.jpg" alt="Morses Pond Wellesley, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/NoQuarrySwimming.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/NoQuarrySwimming.jpg" alt="Halibut Point Quarry Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/OceantoOverlook.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/OceantoOverlook.jpg" alt="Halibut Point Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/orangetulips.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/orangetulips.jpg" alt="Tulips Atlantic Ave. Boston, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/otterriver.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/otterriver.jpg" alt="Otter River State Forest"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/redberries.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/redberries.jpg" alt="Red Berries Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/RockPile.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/RockPile.jpg" alt="Rock Pile Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/RockTowerwContrast.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/RockTowerwContrast.jpg" alt="Balanced Rocks Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/SailboatandGrass.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/SailboatandGrass.jpg" alt="Sailboat Rockport, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/nature/tullylaketrail.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/nature/tullylaketrail.jpg" alt="Tully Lake Royalston, MA"></a></li>
 			</ul>
 		</section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
