--- a/foliage.html
+++ b/foliage.html
@@ -1,16 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
 		<title>Carrie M Photography | Portfolio: Foliage</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="dcterms.dateCopyrighted" content="2014">
+		<meta name="dcterms.rights" content="All rights reserved">
+		<meta name="dcterms.rightsHolder" content="Carrie MacDonald">
+		<meta name="description" content="Fall foliage photos of North Central Massachusetts">
+		<meta name="author" content="Carrie MacDonald">
+		<meta property="og:description" content="Portfolio: Foliage | Fall foliage photos of North Central Massachusetts">
+		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.net/img/foliage/morninglight.jpg">
+		<meta property="og:image:type" content="image/jpeg" />
+		<meta property="og:image:width" content="667" />
+		<meta property="og:image:height" content="500" />
+		<meta property="og:site_name" content="Carrie M Photography | Portfolio: Foliage">
+		<meta property="og:url" content="http://carriemphotography.com/foliage/">
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52103705-1', 'carriemphotography.com');
+		  ga('send', 'pageview');
+		</script>
 	</head>
 	<body>
 		<header>
-			<h1 class="nameplate"><a href="index.html">Carrie M Photography</a></h1>
+			<h1 class="nameplate"><a href="http://carriemphotography.com">Carrie M Photography</a></h1>
 			<nav>
 				<a id="toggle" href="#">
 					<div class="hamburger">
@@ -20,29 +42,29 @@
 		</header>
 		<section id="outer_container">
 			<ul id="container">
-				<li><a href="img/foliage/closetoground.jpg"><img src="img/foliage/closetoground.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/dofmoss.jpg"><img src="img/foliage/dofmoss.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/downtheroad.jpg"><img src="img/foliage/downtheroad.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/greenred.jpg"><img src="img/foliage/greenred.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/leavesonmoss.jpg"><img src="img/foliage/leavesonmoss.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/mist.jpg"><img src="img/foliage/mist.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/morninglight.jpg"><img src="img/foliage/morninglight.jpg" alt="Orange Leaves Westminster, MA"></a></li>
-				<li><a href="img/foliage/orangeleaves.jpg"><img src="img/foliage/orangeleaves.jpg" alt="Orange Leaves, Slate Blue Sky"></a></li>
-				<li><a href="img/foliage/orangeyellow.jpg"><img src="img/foliage/orangeyellow.jpg" alt="Orange and Yellow Leaves"></a></li>
-				<li><a href="img/foliage/redleaves.jpg"><img src="img/foliage/redleaves.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/redyellowleaves.jpg"><img src="img/foliage/redyellowleaves.jpg" alt="Red and Yellow Leaves"></a></li>
-				<li><a href="img/foliage/roundstones.jpg"><img src="img/foliage/roundstones.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/stonewall.jpg"><img src="img/foliage/stonewall.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/tcbrickhouse.jpg"><img src="img/foliage/tcbrickhouse.jpg" alt="Templeton, MA"></a></li>
-				<li><a href="img/foliage/tclawn.jpg"><img src="img/foliage/tclawn.jpg" alt="Templeton, MA"></a></li>
-				<li><a href="img/foliage/tcorangetree.jpg"><img src="img/foliage/tcorangetree.jpg" alt="Templeton, MA"></a></li>
-				<li><a href="img/foliage/tcsidewalk.jpg"><img src="img/foliage/tcsidewalk.jpg" alt="Templeton, MA"></a></li>
-				<li><a href="img/foliage/tcwhitehouse.jpg"><img src="img/foliage/tcwhitehouse.jpg" alt="Templeton, MA"></a></li>
-				<li><a href="img/foliage/vleavesonmoss.jpg"><img src="img/foliage/vleavesonmoss.jpg" alt="Lanes Road Westminster, MA"></a></li>
-				<li><a href="img/foliage/yellowferns.jpg"><img src="img/foliage/yellowferns.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/closetoground.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/closetoground.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/dofmoss.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/dofmoss.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/downtheroad.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/downtheroad.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/greenred.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/greenred.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/leavesonmoss.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/leavesonmoss.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/mist.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/mist.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/morninglight.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/morninglight.jpg" alt="Orange Leaves Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/orangeleaves.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/orangeleaves.jpg" alt="Orange Leaves, Slate Blue Sky"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/orangeyellow.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/orangeyellow.jpg" alt="Orange and Yellow Leaves"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/redleaves.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/redleaves.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/redyellowleaves.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/redyellowleaves.jpg" alt="Red and Yellow Leaves"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/roundstones.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/roundstones.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/stonewall.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/stonewall.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcbrickhouse.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcbrickhouse.jpg" alt="Templeton, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/tclawn.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/tclawn.jpg" alt="Templeton, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcorangetree.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcorangetree.jpg" alt="Templeton, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcsidewalk.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcsidewalk.jpg" alt="Templeton, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcwhitehouse.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/tcwhitehouse.jpg" alt="Templeton, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/vleavesonmoss.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/vleavesonmoss.jpg" alt="Lanes Road Westminster, MA"></a></li>
+				<li><a href="http://dp0dygervfbgv.cloudfront.net/img/foliage/yellowferns.jpg"><img src="http://dp0dygervfbgv.cloudfront.net/img/foliage/yellowferns.jpg" alt="Lanes Road Westminster, MA"></a></li>
 			</ul>
 		</section>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
