--- a/abstract.html
+++ b/abstract.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="Boston Harbor water ripples, rustic barn door wood patterns, and window reflections">
 		<meta name="author" content="Carrie MacDonald">
 		<meta property="og:description" content="Portfolio: Abstract | Boston Harbor water ripples, rustic barn door wood patterns, and window reflections">
-		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodsquare.jpg"">
+		<meta property="og:image" content="http://dp0dygervfbgv.cloudfront.net/img/abstract/woodsquare.jpg">
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="667" />
 		<meta property="og:image:height" content="500" />
@@ -20,6 +20,16 @@
 		<link rel="icon" href="../favicon.ico" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="/style.css">
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-52103705-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
 		<header>
